src/objects/MIBNF_Component__c.object
<CustomObject>
    <description>Multi Invoice BNF Component which is child BNF for an Opportunity</description>
    <fields>
        <fullName>AR_Comments__c</fullName>
        <description>ESPSFDCQI-17974</description>
        <label>Agreement Repository Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accomodation_Amount__c</fullName>
        <label>Accomodation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is an add-on to a previously &quot;In Hand&quot; opportunity where a MIBNF had been submitted and approved.</inlineHelpText>
        <label>Revised BNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Billing_Date_Information__c</fullName>
        <inlineHelpText>The date(s) that the bill should be sent. This is a text field that allows for multiple dates and for billing instructions</inlineHelpText>
        <label>Additional Billing Date Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Delivery_Date_Information__c</fullName>
        <inlineHelpText>Text field provide to allow for additional information to be communicated to the Revenue Analyst regarding delivery</inlineHelpText>
        <label>Additional Delivery Date Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Processing_Time__c</fullName>
        <label>Admin Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_RA_Time_per_Submission__c</fullName>
        <formula>RA_Processing_Time__c / No_of_Submissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average RA Time per Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_SBS_Time_per_Submission__c</fullName>
        <formula>Finance_BNF_processing_time__c / No_of_Submissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average GFSS Time per Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNFName__c</fullName>
        <label>BNFName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BNF_Actor_Ids__c</fullName>
        <label>BNF Actor Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BNF_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BNF_Status__c</fullName>
        <label>BNF Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>SAP Rejected</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Created</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Confirmed</fullName>
                </value>
                <value>
                    <fullName>LO Accepted</fullName>
                </value>
                <value>
                    <fullName>LO Rejected</fullName>
                </value>
                <value>
                    <fullName>RA Accepted</fullName>
                </value>
                <value>
                    <fullName>RA Rejected</fullName>
                </value>
                <value>
                    <fullName>SAP Pending</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Rejected</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Local__c</fullName>
        <formula>Bill_To__r.International_Name__c</formula>
        <label>Bill To (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <description>ESPSFDCQI-15096: Create formula field on Bill To field for BNF and MIBNF.</description>
        <formula>Bill_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_SAP_Base_Code__c</fullName>
        <formula>Bill_To__r.SAP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_SAP_Contact_Local__c</fullName>
        <formula>Bill_To_SAP_Contact__r.Last_Name_Local__c + &quot; &quot; + Bill_To_SAP_Contact__r.First_Name_Local__c</formula>
        <label>Bill To SAP Contact (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_SAP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To SAP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Contact__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Bill To SAP Contact)</relationshipLabel>
        <relationshipName>MIBNF_Components_s7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Bill To)</relationshipLabel>
        <relationshipName>MIBNF_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>DZD</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50% upon signature, 50% upon completion</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly	Not</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carbon_Copy_Local__c</fullName>
        <formula>Carbon_Copy__r.International_Name__c</formula>
        <label>Carbon Copy (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_SAP_Base_Code__c</fullName>
        <formula>Carbon_Copy__r.SAP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carbon Copy SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_SAP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carbon Copy SAP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Contact__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Carbon Copy SAP Contact)</relationshipLabel>
        <relationshipName>BNF_s5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carbon Copy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Carbon Copy)</relationshipLabel>
        <relationshipName>MI_BNF_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_PO_Number__c</fullName>
        <inlineHelpText>Purchase Orders are required by certain clients. Revenue Analyst cannot update Financial system and bill these clients without a client PO number.</inlineHelpText>
        <label>Client PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments to Revenue Analysts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Revenue_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Analyst</label>
        <referenceTo>Revenue_Analyst__c</referenceTo>
        <relationshipLabel>BNF&apos;s</relationshipLabel>
        <relationshipName>BNF_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Revenue_Analyst_user_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp Revenue Analyst user 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BNF_sIlhT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Revenue_Analyst_user_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp Revenue Analyst user 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BNF_s3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Revenue_Analyst_user_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp Revenue Analyst user 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BNF_s4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Revenue_Analyst_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp Revenue Analyst user</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>BNF&apos;s (Comp Revenue Analyst user)</relationshipLabel>
        <relationshipName>BNF_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_or_Data__c</fullName>
        <formula>IF(Opportunity__r.ZREP_Product_Count__c &gt; 0,&quot;Consulting&quot;,&quot;Data&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consulting or Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Master Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <summarizedField>MI_BNF_LineItem__c.Total_Price__c</summarizedField>
        <summaryForeignKey>MI_BNF_LineItem__c.MIBNF_Component__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_Local__c</fullName>
        <formula>Cover_Sheet__r.International_Name__c</formula>
        <label>Cover Sheet (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_SAP_Base_Code__c</fullName>
        <formula>Cover_Sheet__r.SAP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cover Sheet SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_SAP_Contact_Local__c</fullName>
        <formula>Cover_Sheet_SAP_Contact__r.Last_Name_Local__c + &quot; &quot; + Cover_Sheet_SAP_Contact__r.First_Name_Local__c</formula>
        <label>Cover Sheet SAP Contact (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_SAP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cover Sheet SAP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Contact__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Cover Sheet SAP Contact)</relationshipLabel>
        <relationshipName>MIBNF_Components_s8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cover Sheet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Cover Sheet)</relationshipLabel>
        <relationshipName>MI_BNF_s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_RA_Email__c</fullName>
        <label>Current RA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_on_Bill__c</fullName>
        <label>Date on Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Media__c</fullName>
        <label>Delivery Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Diskette</fullName>
                </value>
                <value>
                    <fullName>E-Mail/Internet</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
                <value>
                    <fullName>Optical Disk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tape</fullName>
                </value>
                <value>
                    <fullName>Training - Instructor-led</fullName>
                </value>
                <value>
                    <fullName>Training - WebEx</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Currency__c</fullName>
        <formula>IF(ISPICKVAL( CurrencyIsoCode , &quot;AUD&quot;), &quot;AUD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;BDT&quot;), &quot;BDT&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;CAD&quot;), &quot;CAD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;CHF&quot;), &quot;CHF&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;CNY&quot;), &quot;CNY&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;DKK&quot;), &quot;DKK&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;EUR&quot;), &quot;EUR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;GBP&quot;), &quot;GBP&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;HKD&quot;), &quot;HKD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;IDR&quot;), &quot;IDR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;INR&quot;), &quot;INR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;JPY&quot;), &quot;JPY&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;KRW&quot;), &quot;KRW&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;LKR&quot;), &quot;LKR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;MYR&quot;), &quot;MYR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;NOK&quot;), &quot;NOK&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;NZD&quot;), &quot;NZD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;PHP&quot;), &quot;PHP&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;PKR&quot;), &quot;PKR&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;SEK&quot;), &quot;SEK&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;SGD&quot;), &quot;SGD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;THB&quot;), &quot;THB&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;TWD&quot;), &quot;TWD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;USD&quot;), &quot;USD&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;VND&quot;), &quot;VND&quot;,
IF(ISPICKVAL( CurrencyIsoCode , &quot;ZAR&quot;), &quot;ZAR&quot;,null))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled_PaymentTerms_Bill_To__c</fullName>
        <description>ESPSFDCQI-11624</description>
        <label>Enabled Payment Terms (Bill To)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000</fullName>
                    <label>0000-Default Payment Terms of Customer Master Data</label>
                </value>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Payable immediately Due net</label>
                </value>
                <value>
                    <fullName>Z150</fullName>
                    <label>Z150 - Payable within 150 days from date of invoice</label>
                </value>
                <value>
                    <fullName>Z270</fullName>
                    <label>Z270-Within 270 Days Due net</label>
                </value>
                <value>
                    <fullName>ZA00</fullName>
                    <label>ZA00-Payable within 30 days</label>
                </value>
                <value>
                    <fullName>ZA16</fullName>
                    <label>ZA16 (10 DAYS 1%, NET 60 DAYS)</label>
                </value>
                <value>
                    <fullName>ZB00</fullName>
                    <label>ZB00-Payable immediately Due net</label>
                </value>
                <value>
                    <fullName>ZB03</fullName>
                    <label>ZB03-Within 21 days Due net</label>
                </value>
                <value>
                    <fullName>ZB05</fullName>
                    <label>ZB05-payable within 5 days Due net</label>
                </value>
                <value>
                    <fullName>ZB07</fullName>
                    <label>ZB07-payable within 7 days Due net</label>
                </value>
                <value>
                    <fullName>ZB10</fullName>
                    <label>ZB10-payable within 10 days Due net</label>
                </value>
                <value>
                    <fullName>ZB14</fullName>
                    <label>ZB14-payable within 14 days Due net</label>
                </value>
                <value>
                    <fullName>ZB15</fullName>
                    <label>ZB15-payable within 15 days Due net</label>
                </value>
                <value>
                    <fullName>ZB20</fullName>
                    <label>ZB20-payable within 20 days Due net</label>
                </value>
                <value>
                    <fullName>ZB21</fullName>
                    <label>ZB21-payable within 21 days Due net</label>
                </value>
                <value>
                    <fullName>ZB28</fullName>
                    <label>ZB28 – Payable within 28 days from date of invoice</label>
                </value>
                <value>
                    <fullName>ZB30</fullName>
                    <label>ZB30-Payable within 30 days from date of invoice</label>
                </value>
                <value>
                    <fullName>ZB3M</fullName>
                    <label>ZB3M-30 days end of month</label>
                </value>
                <value>
                    <fullName>ZB45</fullName>
                    <label>ZB45-payable within 45 days Due net</label>
                </value>
                <value>
                    <fullName>ZB50</fullName>
                    <label>ZB50-Payable within 50 days due net</label>
                </value>
                <value>
                    <fullName>ZB60</fullName>
                    <label>ZB60-payable within 60 days due net</label>
                </value>
                <value>
                    <fullName>ZB75</fullName>
                    <label>ZB75-payable within 75 days Due net</label>
                </value>
                <value>
                    <fullName>ZB90</fullName>
                    <label>ZB90-Within 90 Days Due net</label>
                </value>
                <value>
                    <fullName>ZB97</fullName>
                    <label>ZB97-payable immediately upon receipt</label>
                </value>
                <value>
                    <fullName>ZBD4</fullName>
                    <label>ZBD4-payment due 30 days after invoice date</label>
                </value>
                <value>
                    <fullName>ZBD5</fullName>
                    <label>ZBD5-1.5 % discount within 10 days</label>
                </value>
                <value>
                    <fullName>ZBD6</fullName>
                    <label>ZBD6-3 % discount within 14 days</label>
                </value>
                <value>
                    <fullName>ZBFR</fullName>
                    <label>ZBFR-Payment terms France</label>
                </value>
                <value>
                    <fullName>ZBMA</fullName>
                    <label>ZBMA-Payment terms Morocco</label>
                </value>
                <value>
                    <fullName>ZBTN</fullName>
                    <label>ZBTN-Payment terms Tunesia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_BNF_Processing_Time__c</fullName>
        <label>Time from Final Submission to RA to SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_BNF_RA_First_Submission_Date__c</fullName>
        <label>Final BNF RA First Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_BNF_processing_time__c</fullName>
        <formula>NULLVALUE(RA_Processing_Time__c,0) + NULLVALUE(SAP_Processing_Time__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GFSS - Finance Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_RA_Email__c</fullName>
        <label>First RA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_RA__c</fullName>
        <label>First RA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>BNF&apos;s (First Submitter)</relationshipLabel>
        <relationshipName>BNF_s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hono__c</fullName>
        <label>Honoraria Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMS_Sales_Org__c</fullName>
        <formula>TEXT(MIBNF__r.IMS_Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Default_Day__c</fullName>
        <label>Invoice Default Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Header_Text__c</fullName>
        <label>Invoice Header Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Handling_in_SAP_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-4576</description>
        <label>Is Manual Handling in SAP Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opp_Level_Bill_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opp Level Bill Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-13470</description>
        <inlineHelpText>PO mandatory identifier</inlineHelpText>
        <label>Is PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_retainer_downpayment__c</fullName>
        <description>This is a BNF for retainers/down payment; Individual retainer records are created against this one when purchases are made.</description>
        <inlineHelpText>This is a BNF for retainers/down payment; Individual retainer records are created against this one when purchases are made.</inlineHelpText>
        <label>Is this a retainer/down payment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSON_Correction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JSON Correction</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>